--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 body {
-  margin: 0;
+  text-align: center;
+  justify-content: center;
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);;
+  height: 100vh;
+  margin: 20px auto;
+  display: flex;
+  
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +17,95 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.badgediv{
+  display: flex;
+  flex-direction: row;
+}
+.Ebadge{
+  flex: 1;
+ align-items: flex-end;
+}
+.header{
+  flex: 3;
+}
+.seachbar-container{
+      display: flex;
+      flex-direction: row;
+      max-width: 80%;
+      padding: 2;
+}
+
+.search-bar{
+  flex: 3;
+  width: 80%;
+  padding: 5px;
+  border-radius: 10px 0 0 10px;
+}
+.search-button {
+  flex: 1;
+padding: 5px;
+  border-radius: 0px 9px 10px 0px;
+  background-color: rgb(1, 212, 124);
+  color: #fff;
+  margin-left: 2px;
+}
+.typingErr{
+      font-size: 10px;
+      color: red;
+      padding: 5px;
+      text-align: left;
+}
+.recipeContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+}
+.recipe{
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  min-width: 28%;
+  height: 500px;
+  margin: 5px;
+  padding: 15px;
+  border-radius: 5px;
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+  box-shadow: 0px 5px 20px rgb(71, 71, 71);
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.recipeHeader{
+  flex: 1;
+  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+   border-radius: 20px;
+   max-height: 50px;
+   padding : 0 15px;
+   margin: 10px;
+}
+.ingridients-orderlist{
+    flex:1;
+    width: 80%;
+     height: 15%;
+     overflow: hidden;
+     text-align: left;
+     color: gray;
+     font-size: 13px;
+     margin: 0;
+     padding: 5px;
+     
+}
+.calories{
+  font-size: 15;
+}
+.image{
+  flex: 1;
+  border-radius: 15px;
+  width: 95%;
+  height: 20%;
 }
